@@ -1,2 +1,0 @@
-libqgis-core{QGIS_ABI}: no-symbols-control-file
-libqgis-core{QGIS_ABI}: shlib-calls-exit
