@@ -1,1 +1,0 @@
-libqgisgrass{QGIS_ABI}: no-symbols-control-file
