@@ -1,0 +1,1 @@
+usr/share/javascript/jquery/jquery.js usr/share/qgis/doc/api/html/jquery.js
