@@ -5,7 +5,6 @@ usr/share/qgis/doc/CONTRIBUTORS
 usr/share/qgis/doc/DONORS
 usr/share/qgis/doc/INSTALL
 usr/share/qgis/doc/INSTALL.html
-usr/share/qgis/doc/LICENSE
 usr/share/qgis/doc/SPONSORS
 usr/share/qgis/doc/TRANSLATORS
 usr/share/qgis/doc/favicon.ico
