@@ -1,2 +1,0 @@
-qgis-providers-common: privacy-breach-generic
-qgis-providers-common: extra-license-file
