@@ -4,8 +4,9 @@ qgis (2.5.0) UNRELEASED; urgency=medium
   * add libqscintilla2-dev as build dependency
   * add remove sqlanywhere plugin and provider
   * drop support for ubuntu quantal and raring and add utopic
+  * merge downstream debian changes
 
- -- Jürgen E. Fischer <jef@norbit.de>  Tue, 15 Jul 2014 09:09:52 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Wed, 16 Jul 2014 09:09:57 +0200
 
 qgis (2.4.0) unstable; urgency=medium
 
